--- a/Library_server/ui_backend/server/templates/base.html
+++ b/Library_server/ui_backend/server/templates/base.html
@@ -34,7 +34,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('main.search') }}">Search</a></li>
-                        {% if user %}
+                        {% if current_user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Library</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -49,7 +49,7 @@
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             {# <i class="bi-cart-fill me-1"></i> #}
-                            {% if user %}
+                            {% if current_user.is_authenticated %}
                             <a class="nav-link active" href="{{ url_for('auth.logout')}}">Logout</a>
                             {% else %}
                             {% if login %}
