--- a/Library_server/ui_backend/server/templates/login.html
+++ b/Library_server/ui_backend/server/templates/login.html
@@ -26,7 +26,7 @@ Register
 {{ form.hidden_tag() }}
 <div class="container px-4 px-lg-5 my-5">
     <div class="text-center text-black">
-        {{ mc.render_form(form.nick) }}
+        {{ mc.render_form(form.email) }}
         {{ mc.render_form(form.password) }}<br><br>
         <button type="submit" class="btn btn-dark">Sign in</button>
     </div>
