--- a/Library_server/ui_backend/server/templates/base.html
+++ b/Library_server/ui_backend/server/templates/base.html
@@ -79,42 +79,56 @@
         <!-- Section-->
         {% block body %}
         <section class="py-5">
-        {% for book in books %}
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                {% for book in books %}
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
+                            {% if book.sale and not book.owned %}
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            {% endif %}
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="{{ book.img }}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Special Item</h5>
+                                    <h5 class="fw-bolder">{{ book.name }}</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
+                                    {% for _ in range(book.rating)%}
                                         <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
+                                    {% endfor %}
                                     </div>
                                     <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$20.00</span>
-                                    $18.00
+                                    {% if not book.owned %}
+                                    {% if book.price %}
+                                        {% if book.sale%}
+                                    <span class="text-muted text-decoration-line-through">{{ book.price }}$</span>
+                                    {{ book.sale_price }}$
+                                        {% else %}
+                                    {{ book.price }}$
+                                    {% endif %}
+                                    {% else %}
+                                    Free!
+                                    {% endif %}
+                                    {% endif %}
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            {% if book.owned or not book.price %}
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Read</a></div>
+                                {% else %}
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
+                {% endfor %}
                 </div>
             </div>
-        {% endfor %}
         </section>
         {% endblock %}
         <!-- Footer-->
