--- a/Library_server/ui_backend/server/templates/search.html
+++ b/Library_server/ui_backend/server/templates/search.html
@@ -5,7 +5,7 @@
 
 {% block center_text %}
     <h1 class="display-4 fw-bolder">Search</h1>
-    <p class="lead fw-normal text-white-50 mb-0">Type name, category or author of the book/s you are looking for</p>
+    <p class="lead fw-normal text-white-50 mb-0">Type name, genre or author of the book/s you are looking for</p>
 {% endblock %}
 
 {% block body %}
