--- a/Library_server/ui_backend/server/templates/book_view.html
+++ b/Library_server/ui_backend/server/templates/book_view.html
@@ -17,7 +17,8 @@
                         </div>
                         <p class="lead">{{ book.desc }}</p>
                         <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+                            {# <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" /> #}
+                            <a href="{{url_for('main.add_to_library', name=book.name, author=book.author)}}"
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 {% if not book.owned %}
                                 <i class="bi-cart-fill me-1"></i>
@@ -30,6 +31,7 @@
                                 Read
                                 {% endif %}
                             </button>
+                            </a>
                         </div>
                     </div>
                 </div>
