--- a/Library_server/ui_backend/server/templates/main/book_view.html
+++ b/Library_server/ui_backend/server/templates/main/book_view.html
@@ -21,9 +21,10 @@
                         <p class="lead" {% if book.dostepnosc %} style="color:green;">Dostepna{% else %} style="color:red;">Niedostepna{% endif %}</p>
                         <div class="d-flex">
                             {# <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" /> #}
-                            <a {% if not book.dostepnosc %} style="pointer-events: none; color:rgb(206, 206, 206)"{% endif %}href="{{url_for('main.add_to_library', name=book.name, author=book.author)}}"
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                                {% if not book.owned %}
+                            <form action="{{ url_for('main.edit_library', author=book.autor, name=book.tytul) }}" method="POST">
+                            {# <a {% if not book.dostepnosc or in_library %} style="pointer-events: none; color:rgb(206, 206, 206)"{% endif %}href="{{url_for('main.edit_library', name=book.tytul, author=book.autor)}}"> #}
+                            <button class="btn btn-outline-dark flex-shrink-0" {% if not book.dostepnosc or in_library %}style="pointer-events: none; color:rgb(206, 206, 206)"{% endif %} type="submit">
+                                {% if not in_library %}
                                 <i class="bi-cart-fill me-1"></i>
                                 {% if book.price %}
                                 Buy
@@ -31,10 +32,11 @@
                                 Add to library fo FREE!
                                 {% endif %}
                                 {% else %}
-                                Read
+                                Already owned
                                 {% endif %}
                             </button>
-                            </a>
+                            {# </a> #}
+                            </form>
                         </div>
                     </div>
                 </div>
