checkpoint before pull

--- a/Library_server/ui_backend/server/templates/main/library.html
+++ b/Library_server/ui_backend/server/templates/main/library.html
@@ -3,7 +3,9 @@
 {{ profile }}
 {% endblock %}
 {% block center_text%}
+{% if not family_books %}
 <h1 class="display-4 fw-bolder">Enjoy your books!</h1>
+{% endif %}
 {% endblock %}
 {% block body %}
 <section class="py-5">
@@ -38,6 +40,38 @@
                 </div>
             </div>
         {% endfor %}
+        {% if family_books %}
+            {% for user, book in family_books.items() %}
+            <h1 class="display-4 fw-bolder">{{ user }}'s books!</h1>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Sale badge-->
+                    <!-- Product image-->
+                    {# <img class="card-img-top" src="{{ book.img }}" alt="..." /> #}
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">{{ book.book_name }}</h5>
+                            <h6 class="fw-bolder">{{ book.book_author }}</h6>
+                            <p>Page: {{ book.current_page }}/{{ book.pages }}</p>
+                            <!-- Product reviews-->
+                            <div class="d-flex justify-content-center small text-warning mb-2">
+                            </div>
+                            <!-- Product price-->
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{ url_for('main.book_view', author=book.book_author, name=book.book_name) }}">Read</a></div>
+                    </div>
+                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <div class="text-center"><button class="btn btn-outline-dark mt-auto bg-danger" onclick="deleteBook('{{ book.book_author }}', '{{ book.book_name }}')">Remove</button></div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
     </div>
 </section>
