--- a/Library_server/ui_backend/server/templates/base.html
+++ b/Library_server/ui_backend/server/templates/base.html
@@ -38,9 +38,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Library</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All books</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.all_books') }}">All books</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Family library</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.family_library') }}">Family library</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.user_library') }}">Your library</a></li>
                             </ul>
                         </li>
