--- a/Library_server/ui_backend/server/templates/admin/db_view.html
+++ b/Library_server/ui_backend/server/templates/admin/db_view.html
@@ -3,5 +3,9 @@
 DB
 {% endblock %}
 {% block body %}
-{{ data }}
+<form action="{{ url_for('admin.edit_db', db=db)}}" method="POST">
+    <button type="submit">New</button>
+</form>
+{{ mc.admin_view(data, columns, db) }}
 {% endblock %}
+{% import 'macros.jinja' as mc %}
