--- a/Library_server/ui_backend/server/templates/admin/edit_form.html
+++ b/Library_server/ui_backend/server/templates/admin/edit_form.html
@@ -3,7 +3,12 @@
 Form
 {% endblock title%}
 {% block body %}
-<form action="{{ url_for('admin.edit_form') }}" method='POST'>
+{% with messages = get_flashed_messages() %}
+    {% for message in messages %}
+        <p style="color: red;">{{ message }}</p>
+    {% endfor %}
+{% endwith %}   
+<form action="{{ url_for('admin.edit_form', db=db, id=id) }}" method='POST' novalidate>
 {{ form.hidden_tag() }}
 <div class="container px-4 px-lg-5 my-5">
     <div class="text-center text-black">
