--- a/Library_server/ui_backend/server/templates/admin/db_view.html
+++ b/Library_server/ui_backend/server/templates/admin/db_view.html
@@ -3,6 +3,11 @@
 DB
 {% endblock %}
 {% block body %}
+{% with messages = get_flashed_messages() %}
+    {% for message in messages %}
+        <p style="color: red;">{{ message }}</p>
+    {% endfor %}
+{% endwith %}  
 <form action="{{ url_for('admin.edit_db', db=db)}}" method="POST">
     <button type="submit">New</button>
 </form>
