updated headers but post and delete and tokens view not working

--- a/Library_server/ui_backend/server/templates/admin/db_view.html
+++ b/Library_server/ui_backend/server/templates/admin/db_view.html
@@ -3,6 +3,7 @@
 DB
 {% endblock %}
 {% block body %}
+{# {{ data }} #}
 {% with messages = get_flashed_messages() %}
     {% for message in messages %}
         <p style="color: red;">{{ message }}</p>
